<resources>
    <string name="app_name">Shared Floor</string>

    <!--  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_selector_fragments_">Shared Floor</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_selector">Shared Floor</string>
    <string name="loginOK">Autentificación correcta</string>

    <!-- Menu items-->
    <string name="action_settings">Configuracion</string>

    <!-- expenses -->
    <string name="expense_paid">Pagó:</string>
    <string name="expense_for_user">Por persona</string>
    <string name="expense_who_paid">Casero</string>
    <string name="expense_per_user_paid_text">Por persona</string>
    <string name="loginEDThintUsername">Usuario</string>
    <string name="loginEDThintPassword">Contraseña</string>
    <string name="loginCHBRemember">Recordar</string>
    <string name="loginBTNOK">Iniciar Sesión</string>
    <string name="loginTXVForget">Olvidé mi contraseña</string>
    <string name="loginTXVRegister">Registrarse</string>


    <!-- loggin links -->
    <string name="loginTXVlinkRegister">
        <!-- test url -->
        <a href="https://www.google.es/">Registrarse</a>
    </string>

    <string name="loginTXVlinkForget">
        <!-- test url -->

        <a href="https://www.google.es/">Olvidé mi contraseña</a>
    </string>
    <string name="home_title">HOGAR</string>
    <string name="expense_title">Gastos</string>
    <string name="purchase_title">Lista</string>
    <string name="clean_title">Limpieza</string>
    <string name="debts_title">Deudas</string>
    <string name="title_activity_general_setting_activity">Settings</string>
    <string name="action_about">Acerca de</string>
    <string name="additem_btn_ok">Añadir</string>
    <string name="additem_txv_type">Tipo</string>
    <string name="additem_txv_title">Añadir elemento a la lista</string>
    <string name="additem_txv_name">Nombre del elemento</string>
    <string name="generalSettinghome_title">Configuracion del hogar</string>
    <string name="generalSetting_listTypes">Lista de tipos de elementos</string>
    <string name="action_listTypes">Tipos de elementos</string>
    <string name="cleanBTNconfig">Configurar</string>


</resources>
