<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_item_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jtsw.sharedfloor.AddItem_activity">

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/additemBTNadd"
        android:background="@drawable/btn_select"
        android:onClick="clickAdd"
        android:layout_gravity="bottom|end"
        app:fab_size="normal"
        android:src="@drawable/icon_plus"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:text="@string/additem_txv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/itemAddTXVtype"
        android:textSize="@dimen/additem_text_size"/>

    <TextView
        android:text="@string/additem_txv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/additemTXVtitle"
        android:textSize="@dimen/additem_text_size"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/itemAddTXVtype"
        android:layout_alignParentEnd="true"
        android:id="@+id/additemSPNtypeelement"
        android:layout_alignParentRight="true"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/additemTILnameElement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/additemTXVtitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        android:id="@+id/additemEDTname"
        android:hint="@string/additem_txv_name"
        android:text=""
        />
    </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
